tests/samples/positive/expressions/float_nan_comparison.ax
module float_nan_comparison;

fn main() -> i32 {
    let zero: f64 = ((0) as f64);
    let nan: f64 = zero / zero;
    if nan == nan {
        return 1;
    }
    if !(nan != nan) {
        return 2;
    }
    return 0;
}
